--- a/.gitignore
+++ b/.gitignore
@@ -159,5 +159,7 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
-#database
+
 *.db
+/salary_predictor/scalers/*
+/salary_predictor/*.h5
